# Python-config-module

./: .gitignore  INSTALL  MANIFEST  MANIFEST.in  Makefile  README.install  README.md  README.txt  RELEASE_NOTES  config.py  pyproject.toml  run-tests.py  sample-program.py  setup.py  test.py
config_moxad/: config.py
configs/: config-defs.conf  config.conf  config1.1.conf  config1.2.conf  config1.conf  config2.conf  config3.conf  some-arrays.conf  some-hashes.conf  some-scalars.conf  test-defs.conf  test.conf  test2.conf
doc/: config.html
