[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "config_moxad"
version = "4.0.1"
authors = [
  { name="RJ White", email="rj.white@moxad.com" },
]
description = "read non-ugly human-readable config files"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English"
]

[project.urls]
Homepage = "https://github.com/rjwhite/Python-config-module"

